--- a/index.html
+++ b/index.html
@@ -81,11 +81,30 @@
         <h1 id="title">Pong Chau Chan</h2>   
         <figure id="img-div"><img src="images/pgp family photo.png" alt="tribute photo">
             <figcaption id="img-caption">
-                Pong Chao and family
+                Pong Chao as a child seated at the bottom right between his grandmother and father
+            </figcaption>
+            </figure>
+        <figure id="img-div"><img src="images/pgp teen.jpg" alt="tribute photo">
+            <figcaption id="img-caption">
+                Pong Chao as a teen
+            </figcaption>
+            </figure>
+        <figure id="img-div"><img src="images/husband and wife.jpg" alt="tribute photo">
+            <figcaption id="img-caption">
+                Pong Chao and his wife
+            </figcaption>
+            </figure>
+        <figure id="img-div"><img src="images/first sons.jpg" alt="tribute photo">
+            <figcaption id="img-caption">
+                Pong Chao with his wife, parents, and his eldest twin sons
             </figcaption>
             </figure>
         <figure id="img-div"><img src="images/tributeimg.jpg" alt="tribute photo">
             <figcaption id="img-caption">Pong Chau Chan on the bottom left with his wife on the bottom right holding their first grandchild, and at the top from right to left; the daughter in law, and her mother and father.
+            </figcaption>
+            </figure>
+        <figure id="img-div"><img src="images/full family.jpg" alt="tribute photo">
+            <figcaption id="img-caption">Pong Chau Chan at the center cutting the cake with his 3 sons, daughter in laws and 6 grandchildren
             </figcaption>
             </figure>
         <figure id="img-div"><img src="images/pgp with grand children.jpg" alt="tribute photo">
