--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
                 Pong Chao as a teen
             </figcaption>
             </figure>
+        <figure id="img-div"><img src="images/pgp young adult.jpg" alt="tribute photo">
+            <figcaption id="img-caption">
+                Pong Chao as a young adult
+            </figcaption>
+            </figure>
         <figure id="img-div"><img src="images/husband and wife.jpg" alt="tribute photo">
             <figcaption id="img-caption">
                 Pong Chao and his wife
@@ -99,12 +104,19 @@
                 Pong Chao with his wife, parents, and his eldest twin sons
             </figcaption>
             </figure>
+        <figure id="img-div"><img src="images/pgp wife and twins.jpg" alt="tribute photo">
+            <figcaption id="img-caption">
+                Pong Chao with his wife and his twins
+            </figcaption>
+            </figure>
         <figure id="img-div"><img src="images/tributeimg.jpg" alt="tribute photo">
-            <figcaption id="img-caption">Pong Chau Chan on the bottom left with his wife on the bottom right holding their first grandchild, and at the top from right to left; the daughter in law, and her mother and father.
+            <figcaption id="img-caption">
+                Pong Chau Chan on the bottom left with his wife on the bottom right holding their first grandchild, and at the top from right to left; the daughter in law, and her mother and father.
             </figcaption>
             </figure>
         <figure id="img-div"><img src="images/full family.jpg" alt="tribute photo">
-            <figcaption id="img-caption">Pong Chau Chan at the center cutting the cake with his 3 sons, daughter in laws and 6 grandchildren
+            <figcaption id="img-caption">
+                Pong Chau Chan at the center cutting the cake with his 3 sons, daughter in laws and 6 grandchildren
             </figcaption>
             </figure>
         <figure id="img-div"><img src="images/pgp with grand children.jpg" alt="tribute photo">
