--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribute to Pong Chau Chan</title>
     <link rel="stylesheet" type="text/css" href="CSS/CSStribute.css">
+    
     <style>
         #main{
             background: hsl(0,0%,60%);
@@ -65,7 +69,7 @@
             text-align:center;
             margin:.5em;
         }
-        @media(max-width:768px){
+        @media only screen and (max-width:768px){
             #main{
                 width:100%;
             }
