--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribute to Pong Chau Chan</title>
     <link rel="stylesheet" type="text/css" href="CSS/CSStribute.css">
-    
+
     <style>
         #main{
             background: hsl(0,0%,60%);
@@ -22,6 +22,11 @@
             display:grid;
             grid-template-columns: 1fr 1fr;
             margin:0;
+
+        }
+        #showcase figure{
+            width: 90%;
+            height:auto;
         }
         #img-div{
             padding-top:1em;
@@ -48,8 +53,6 @@
             padding-left:1em;
             padding-right:1em;
             border-radius: 5px;
-
-
         }
         #tribute-info h2{
             grid-column:1/3;
@@ -70,19 +73,24 @@
             margin:.5em;
         }
         @media only screen and (max-width:768px){
-            #main{
-                width:100%;
+            #showcase{
+                display:flex;
+                flex-wrap: wrap;
+                flex-basis: 100%;
+                margin: 0;
+                justify-content: center;
             }
             #img-div img{
                 width:90%;
+            }
+            #main{
+                width:100%;
             }
             #tribute-info{
                 width:90%;
                 margin:auto
             }
-            #showcase{
-                display:block;
-            }
+
 
         }
 
@@ -92,55 +100,58 @@
 
 <body id="main">
     <header>
-        <h1 id="title">Pong Chau Chan</h2>  
-    <div id="showcase">
-        <figure id="img-div"><a href="images/pgp family photo.png"><img src="images/pgp family photo.png" alt="tribute photo"></a>
-            <figcaption id="img-caption">
-                Pong Chao as a child seated at the bottom right between his grandmother and father
-            </figcaption>
-            </figure>
-        <figure id="img-div"><a href="images/pgp teen.jpg"><img src="images/pgp teen.jpg" alt="tribute photo"></a>
-            <figcaption id="img-caption">
-                Pong Chao as a teen
-            </figcaption>
-            </figure>
-        <figure id="img-div"><a href="images/pgp young adult.jpg"><img src="images/pgp young adult.jpg" alt="tribute photo"></a>
-            <figcaption id="img-caption">
-                Pong Chao as a young adult
-            </figcaption>
-            </figure>
-        <figure id="img-div"><a href="images/husband and wife.jpg"><img src="images/husband and wife.jpg" alt="tribute photo"></a>
-            <figcaption id="img-caption">
-                Pong Chao and his wife
-            </figcaption>
-            </figure>
-        <figure id="img-div"><a href="images/first sons.jpg"><img src="images/first sons.jpg" alt="tribute photo"></a>
-            <figcaption id="img-caption">
-                Pong Chao with his wife, parents, and his eldest twin sons
-            </figcaption>
-            </figure>
-        <figure id="img-div"><a href="images/pgp wife and twins.jpg"><img src="images/pgp wife and twins.jpg" alt="tribute photo"></a>
-            <figcaption id="img-caption">
-                Pong Chao with his wife and his twins
-            </figcaption>
-            </figure>
-        <figure id="img-div"><a href="images/tributeimg.jpg"><img src="images/tributeimg.jpg" alt="tribute photo"></a>
-            <figcaption id="img-caption">
-                Pong Chau Chan on the bottom left with his wife on the bottom right holding their first grandchild, and at the top from right to left; the daughter in law, and her mother and father.
-            </figcaption>
-            </figure>
-        <figure id="img-div"><a href="images/full family.jpg"><img src="images/full family.jpg" alt="tribute photo"></a>
-            <figcaption id="img-caption">
-                Pong Chau Chan at the center cutting the cake with his 3 sons, daughter in laws and 6 grandchildren
-            </figcaption>
-            </figure>
-        <figure id="img-div"><a href="images/pgp with grand children.jpg"><img src="images/pgp with grand children.jpg" alt="tribute photo"></a>
-            <figcaption id="img-caption">
-                Pong Chao with grandson Mason and adopted grand daughter Irene Jung
-            </figcaption>
-            </figure>    
-    </div>
+        <h1 id="title">Pong Chau Chan</h2>
+    
     </header>
+    <section>
+        <div id="showcase">
+            <figure id="img-div"><a href="images/pgp family photo.png"><img src="images/pgp family photo.png" alt="tribute photo"></a>
+                <figcaption id="img-caption">
+                    Pong Chao as a child seated at the bottom right between his grandmother and father
+                </figcaption>
+                </figure>
+            <figure id="img-div"><a href="images/pgp teen.jpg"><img src="images/pgp teen.jpg" alt="tribute photo"></a>
+                <figcaption id="img-caption">
+                    Pong Chao as a teen
+                </figcaption>
+                </figure>
+            <figure id="img-div"><a href="images/pgp young adult.jpg"><img src="images/pgp young adult.jpg" alt="tribute photo"></a>
+                <figcaption id="img-caption">
+                    Pong Chao as a young adult
+                </figcaption>
+                </figure>
+            <figure id="img-div"><a href="images/husband and wife.jpg"><img src="images/husband and wife.jpg" alt="tribute photo"></a>
+                <figcaption id="img-caption">
+                    Pong Chao and his wife
+                </figcaption>
+                </figure>
+            <figure id="img-div"><a href="images/first sons.jpg"><img src="images/first sons.jpg" alt="tribute photo"></a>
+                <figcaption id="img-caption">
+                    Pong Chao with his wife, parents, and his eldest twin sons
+                </figcaption>
+                </figure>
+            <figure id="img-div"><a href="images/pgp wife and twins.jpg"><img src="images/pgp wife and twins.jpg" alt="tribute photo"></a>
+                <figcaption id="img-caption">
+                    Pong Chao with his wife and his twins
+                </figcaption>
+                </figure>
+            <figure id="img-div"><a href="images/tributeimg.jpg"><img src="images/tributeimg.jpg" alt="tribute photo"></a>
+                <figcaption id="img-caption">
+                    Pong Chau Chan on the bottom left with his wife on the bottom right holding their first grandchild, and at the top from right to left; the daughter in law, and her mother and father.
+                </figcaption>
+                </figure>
+            <figure id="img-div"><a href="images/full family.jpg"><img src="images/full family.jpg" alt="tribute photo"></a>
+                <figcaption id="img-caption">
+                    Pong Chau Chan at the center cutting the cake with his 3 sons, daughter in laws and 6 grandchildren
+                </figcaption>
+                </figure>
+            <figure id="img-div"><a href="images/pgp with grand children.jpg"><img src="images/pgp with grand children.jpg" alt="tribute photo"></a>
+                <figcaption id="img-caption">
+                    Pong Chao with grandson Mason and adopted grand daughter Irene Jung
+                </figcaption>
+                </figure>    
+        </div>
+    </section>
     <main>
 
         <div id="tribute-info">
