--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
             text-align:center;
             margin:.5em;
         }
+        ul{
+            list-style: none;
+            font-size: .8rem;
+        }
+        
         @media only screen and (max-width:768px){
             #showcase{
                 display:flex;
@@ -100,54 +105,56 @@
 
 <body id="main">
     <header>
-        <h1 id="title">Pong Chau Chan</h2>
+        <h1 id="title">Pong Chau Chan 陳邦儔</h2>
     
     </header>
     <section>
         <div id="showcase">
             <figure id="img-div"><a href="images/pgp family photo.png"><img src="images/pgp family photo.png" alt="tribute photo"></a>
                 <figcaption id="img-caption">
-                    Pong Chao as a child seated at the bottom right between his grandmother and father
+                    Pong Chao 邦儔 as a child seated at the bottom right between his grandmother and father 陳漢子
                 </figcaption>
                 </figure>
             <figure id="img-div"><a href="images/pgp teen.jpg"><img src="images/pgp teen.jpg" alt="tribute photo"></a>
                 <figcaption id="img-caption">
-                    Pong Chao as a teen
+                    Pong Chao 邦儔 as a teen
                 </figcaption>
                 </figure>
             <figure id="img-div"><a href="images/pgp young adult.jpg"><img src="images/pgp young adult.jpg" alt="tribute photo"></a>
                 <figcaption id="img-caption">
-                    Pong Chao as a young adult
+                    Pong Chao 邦儔 as a young adult
                 </figcaption>
                 </figure>
             <figure id="img-div"><a href="images/husband and wife.jpg"><img src="images/husband and wife.jpg" alt="tribute photo"></a>
                 <figcaption id="img-caption">
-                    Pong Chao and his wife
+                    Pong Chao 陳邦儔 and his wife 陳葉娟
                 </figcaption>
                 </figure>
             <figure id="img-div"><a href="images/first sons.jpg"><img src="images/first sons.jpg" alt="tribute photo"></a>
                 <figcaption id="img-caption">
-                    Pong Chao with his wife, parents, and his eldest twin sons
+                    Pong Chao 邦儔 with his wife, parents, and his twin sons, Irving 答英 and Howard 大豪 
                 </figcaption>
                 </figure>
             <figure id="img-div"><a href="images/pgp wife and twins.jpg"><img src="images/pgp wife and twins.jpg" alt="tribute photo"></a>
                 <figcaption id="img-caption">
-                    Pong Chao with his wife and his twins
+                    Pong Chao 邦儔 with his wife and his twins
                 </figcaption>
                 </figure>
             <figure id="img-div"><a href="images/tributeimg.jpg"><img src="images/tributeimg.jpg" alt="tribute photo"></a>
                 <figcaption id="img-caption">
-                    Pong Chau Chan on the bottom left with his wife on the bottom right holding their first grandchild, and at the top from right to left; the daughter in law, and her mother and father.
+                    Pong Chau 邦儔 on the bottom left with his wife on the bottom right holding their first grandchild, and at the top from right to left; the daughter in law, and her mother and father.
                 </figcaption>
                 </figure>
             <figure id="img-div"><a href="images/full family.jpg"><img src="images/full family.jpg" alt="tribute photo"></a>
                 <figcaption id="img-caption">
-                    Pong Chau Chan at the center cutting the cake with his 3 sons, daughter in laws and 6 grandchildren
+                    Pong Chau 邦儔 and his wife at the center cutting the cake with his 3 sons, daughter in laws(L-R 鍾杏玲 大年 黃美珠 大英 李艷芬
+                     ) and 6 grandchildren 
+                    (L-R Cody 尚文 Mason 尚智 Author宇恒 Eric 立德 Richie宇亮 Sophia 倩媛)
                 </figcaption>
                 </figure>
             <figure id="img-div"><a href="images/pgp with grand children.jpg"><img src="images/pgp with grand children.jpg" alt="tribute photo"></a>
                 <figcaption id="img-caption">
-                    Pong Chao with grandson Mason and adopted grand daughter Irene Jung
+                    Pong Chao 邦儔 with grandson Mason and adopted grand daughter Irene Jung
                 </figcaption>
                 </figure>    
         </div>
@@ -160,7 +167,8 @@
             <div>
                 <p><time>Nov 13, 1928</time></p></div>
                 <div><p>
-                    Born in Tai Shan, Guan Dong Province, China
+                    Born in Tai Shan, Guan Dong Province, China <br>廣東省台山 縣六村鄉朗美
+                    村
                 </p>
             </div>
             <div>
@@ -186,7 +194,10 @@
 
     </main>
     <footer>
-        He will be missed by his family
+        <ul>He will be missed by his family
+            <li><a href="https://970ofk.smartapps.cn/pages/result/result?documentId=1141047286&oauthType=search&_swebfr=1&_swebFromHost=baiduboxapp" target="_blank">News article regarding Pong Chao's father 陳漢子</a>
+                </li>
+        </ul>
     </footer>
 
 </body>
